[gd_scene load_steps=48 format=4 uid="uid://yhwnpjkypqxp"]

[ext_resource type="Script" uid="uid://d26n35vkphehu" path="res://Scripts/room_shop.gd" id="1_uv0rh"]
[ext_resource type="Texture2D" uid="uid://cet2td4yrlbk6" path="res://Textures/Tiles/ground.png" id="2_g5wir"]
[ext_resource type="Texture2D" uid="uid://cn0m8rp6vv4pn" path="res://Textures/Tiles/Brown brick tile.png" id="3_h3mm1"]
[ext_resource type="Texture2D" uid="uid://gcgs8ruhlerx" path="res://Textures/Tiles/Drop edge.png" id="4_8klot"]
[ext_resource type="Texture2D" uid="uid://cs10vgt0yxf27" path="res://Textures/Tiles/drop hole.png" id="5_kjmdx"]
[ext_resource type="Texture2D" uid="uid://ompf2g311mi1" path="res://Textures/Tiles/Tile set shop.png" id="6_g5wir"]
[ext_resource type="Texture2D" uid="uid://c0h608ntusxe0" path="res://Textures/Tiles/Brick tile.png" id="6_uv0rh"]
[ext_resource type="Texture2D" uid="uid://bbb53q2liygxj" path="res://Textures/Tiles/Door.png" id="7_mbb8p"]
[ext_resource type="Texture2D" uid="uid://dfwunsnp0eo67" path="res://Textures/Tiles/ground_stone.png" id="8_r6px1"]
[ext_resource type="Texture2D" uid="uid://dj8pjyons6gs4" path="res://Textures/Tiles/door path.png" id="9_73g32"]
[ext_resource type="Texture2D" uid="uid://cl7oe5optmoi6" path="res://Textures/Tiles/Platform.png" id="10_4k14b"]
[ext_resource type="Texture2D" uid="uid://nbsolrltr2nk" path="res://Textures/Tiles/Wall 3.png" id="11_e7l0e"]
[ext_resource type="Texture2D" uid="uid://h8djb4sx8vhl" path="res://Textures/Tiles/Drop corner.png" id="12_stka6"]
[ext_resource type="Texture2D" uid="uid://c6dkdm13lljme" path="res://Textures/Tiles/Floor.png" id="13_r2uel"]
[ext_resource type="PackedScene" uid="uid://d4b5t5w22h0ko" path="res://Scenes/barrel.tscn" id="14_f3edp"]
[ext_resource type="Script" uid="uid://ml08hgrgs230" path="res://Scripts/item_spawns.gd" id="16_h3mm1"]
[ext_resource type="PackedScene" uid="uid://c2p365w32k1w5" path="res://Scenes/Chest.tscn" id="17_8klot"]
[ext_resource type="Texture2D" uid="uid://drpkue2j6vg0j" path="res://Textures/Guy.png" id="18_kjmdx"]
[ext_resource type="Script" uid="uid://bipbqyvq5pf5b" path="res://Scripts/guy.gd" id="19_uv0rh"]
[ext_resource type="FontFile" uid="uid://sklhjblg150t" path="res://Fonts/Bungee-Regular.ttf" id="20_mbb8p"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4gp0m"]
texture = ExtResource("2_g5wir")
texture_region_size = Vector2i(200, 200)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ci6au"]
texture = ExtResource("3_h3mm1")
texture_region_size = Vector2i(200, 200)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-100, -100, 100, -100, 100, 100, -100, 100)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5fqy3"]
texture = ExtResource("4_8klot")
texture_region_size = Vector2i(200, 200)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-66.66667, -100, 100, -100, 100, 100, -66.66667, 100)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_08xfw"]
texture = ExtResource("5_kjmdx")
texture_region_size = Vector2i(200, 200)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-100, -100, 100, -100, 100, 100, -100, 100)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_h3mm1"]
texture = ExtResource("6_g5wir")
texture_region_size = Vector2i(200, 200)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-100, -100, 100, -100, 100, 100, -14.285713, 100, -14.285713, 14.285713, -100, 14.285713)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-100, -100, 100, -100, 100, 14.285713, 14.285713, 14.285713, 14.285713, 100, -100, 100)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-100, -100, 14.285713, -100, 14.285713, 100, -100, 100)
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-14.285713, -100, 100, -100, 100, 100, -14.285713, 100)
4:1/0 = 0
4:1/0/z_index = 1
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-100, -100, 100, -100, 100, 14.285713, -100, 14.285713)
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_phao3"]
texture = ExtResource("6_uv0rh")
texture_region_size = Vector2i(200, 200)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-100, -100, 100, -100, 100, 100, -100, 100)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jghof"]
texture = ExtResource("7_mbb8p")
texture_region_size = Vector2i(200, 200)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ojh4s"]
texture = ExtResource("8_r6px1")
texture_region_size = Vector2i(200, 200)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ilpkg"]
texture = ExtResource("9_73g32")
texture_region_size = Vector2i(200, 200)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wph6n"]
texture = ExtResource("10_4k14b")
texture_region_size = Vector2i(200, 200)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_avhjg"]
texture = ExtResource("11_e7l0e")
texture_region_size = Vector2i(200, 200)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-100, -100, 100, -100, 100, 100, -100, 100)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0tv2a"]
texture = ExtResource("12_stka6")
texture_region_size = Vector2i(200, 200)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(100, -66.66667, 100, 100, -66.66667, 100, -33.333336, 33.33333, 33.33333, -33.333336)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5lmls"]
texture = ExtResource("13_r2uel")
texture_region_size = Vector2i(200, 200)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_26yhd"]
tile_size = Vector2i(200, 200)
physics_layer_0/collision_layer = 1
sources/1 = SubResource("TileSetAtlasSource_ci6au")
sources/0 = SubResource("TileSetAtlasSource_4gp0m")
sources/2 = SubResource("TileSetAtlasSource_phao3")
sources/4 = SubResource("TileSetAtlasSource_ojh4s")
sources/5 = SubResource("TileSetAtlasSource_ilpkg")
sources/3 = SubResource("TileSetAtlasSource_jghof")
sources/6 = SubResource("TileSetAtlasSource_wph6n")
sources/8 = SubResource("TileSetAtlasSource_0tv2a")
sources/10 = SubResource("TileSetAtlasSource_5fqy3")
sources/11 = SubResource("TileSetAtlasSource_08xfw")
sources/7 = SubResource("TileSetAtlasSource_avhjg")
sources/9 = SubResource("TileSetAtlasSource_5lmls")
sources/12 = SubResource("TileSetAtlasSource_h3mm1")

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_nfrpb"]
polygon = PackedVector2Array(400, 0, 400, 200, 600, 200, 600, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nfrpb"]
size = Vector2(200, 200)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4gp0m"]
size = Vector2(200, 200)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_phao3"]
size = Vector2(200, 200)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ojh4s"]
size = Vector2(200, 200)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mbine"]
size = Vector2(3304, 2088)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_fr46g"]
polygon = PackedVector2Array(1200.0001, -799.9999, 1200.0001, -599.9999, -199.99995, -600, -200, 200, -400, 200, -399.99994, -800)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ilpkg"]
size = Vector2(2752, 1560)

[sub_resource type="Gradient" id="Gradient_1teyb"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_avhjg"]
gradient = SubResource("Gradient_1teyb")
width = 1000
height = 1000
fill = 2
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.5)

[sub_resource type="NavigationPolygon" id="NavigationPolygon_1teyb"]
vertices = PackedVector2Array(2582, 18, 2582, 1222, 2557.6406, 1222, 1200, 912, 1168, 840, 2472.9766, 1264.3281, 2406.2266, 1372.7891, 1168, 992, 178.53906, 18, 1088, 808, 186.0625, 160.96875, 1016, 840, 161.21094, 260.3828, 2397.9688, 1472, 768, 1464, 776, 1384, 1096, 1016, -398, 1798, -398, 394.78906, -303.82813, 402.03906, 632, 1584, 2397.9766, 1647.75, 2405.4922, 1798, 496, 1600, 1016, 992, 744, 1328, 984, 912, 696, 1272, 44.140625, 385.65625, 111.36719, 326.84375, 2405.9531, 1567.9375, 712, 1536, -231.88281, 394.03906, -135.96094, 402.03906, -47.09375, 393.96094, -184, 1408, -168, 1344, 600, 1224, 480, 1224, 376, 1224, 200, 1224, 64, 1224, -32, 1232, -104, 1272, 272, 1600, 80, 1592, -40, 1584, -120, 1544, -168, 1472)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3, 4), PackedInt32Array(3, 2, 5), PackedInt32Array(3, 5, 6, 7), PackedInt32Array(8, 0, 4, 9, 10), PackedInt32Array(10, 9, 11, 12), PackedInt32Array(7, 6, 13, 14, 15, 16), PackedInt32Array(17, 18, 19), PackedInt32Array(20, 21, 22, 17, 23), PackedInt32Array(24, 16, 15, 25), PackedInt32Array(26, 24, 25, 27, 28, 29), PackedInt32Array(29, 12, 11, 26), PackedInt32Array(14, 13, 30, 21, 31), PackedInt32Array(17, 19, 32, 33), PackedInt32Array(17, 33, 34), PackedInt32Array(35, 17, 34, 28, 36), PackedInt32Array(28, 27, 37), PackedInt32Array(28, 37, 38), PackedInt32Array(28, 38, 39), PackedInt32Array(28, 39, 40), PackedInt32Array(28, 40, 41), PackedInt32Array(28, 41, 42), PackedInt32Array(28, 42, 43), PackedInt32Array(20, 31, 21), PackedInt32Array(44, 23, 17), PackedInt32Array(45, 44, 17), PackedInt32Array(46, 45, 17), PackedInt32Array(47, 46, 17), PackedInt32Array(48, 47, 17), PackedInt32Array(35, 48, 17), PackedInt32Array(28, 43, 36)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-408, 384, -304, 392, -232, 384, -136, 392, -48, 384, 40, 376, 104, 320, 152, 256, 176, 160, 168, 8, 2592, 8, 2592, 1232, 2560, 1232, 2480, 1272, 2416, 1376, 2408, 1472, 2416, 1568, 2408, 1648, 2416, 1808, -184, 1808, -408, 1808)])

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uv0rh"]
bg_color = Color(0.42352942, 0.42352942, 0.42352942, 0.78431374)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.851769, 0.8517689, 0.85176885, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="Theme" id="Theme_mbb8p"]
Label/styles/normal = SubResource("StyleBoxFlat_uv0rh")

[node name="Room" type="Node2D" groups=["rooms"]]
script = ExtResource("1_uv0rh")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD+////BwAAAAAAAAD+/wAADAABAAEAAAD+/wEADAABAAIAAAD+/wIADAAAAAEAAAD+/wQAAAAAAAAAAAD+/wUAAAAAAAAAAAD+/wYAAAAAAAAAAAD/////BwAAAAAAAAD//wAADAAAAAIAAAD//wEADAAFAAEAAAD//wIADAAAAAAAAAD//wMAAAAAAAAAAAD//wQAAAAAAAAAAAD//wUAAAAAAAAAAAAAAP//BwAAAAAAAAAAAAAADAABAAAAAAAAAAEADAACAAEAAAAAAAIADAACAAAAAAAAAAMAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAAYAAAAAAAAAAAABAP//BwAAAAAAAAABAAAAAAAAAAAAAAABAAEAAAAAAAAAAAABAAIAAAAAAAAAAAABAAMAAAAAAAAAAAABAAQAAAAAAAAAAAABAAYAAAAAAAAAAAACAP//BwAAAAAAAAACAAAAAAAAAAAAAAACAAEAAAAAAAAAAAACAAIADAABAAEAAAACAAMADAABAAIAAAACAAQADAABAAIAAAADAP//BwAAAAAAAAADAAAAAAAAAAAAAAADAAEAAAAAAAAAAAADAAIADAAAAAIAAAADAAMADAAEAAAAAAADAAQADAAFAAAAAAADAAUADAAEAAEAAAADAAYADAAAAAAAAAAEAP//BwAAAAAAAAAEAAAAAAAAAAAAAAAEAAEAAAAAAAAAAAAEAAIADAAAAAIAAAAEAAMADAAEAAEAAAAEAAQACQAAAAAAAAAEAAUADAAEAAEAAAAEAAYADAAAAAAAAAAFAAAAAAAAAAAAAAAFAAEAAAAAAAAAAAAFAAIADAAAAAIAAAAFAAMADAAEAAEAAAAFAAQACQAAAAAAAAAFAAUADAAEAAEAAAAFAAYADAAAAAAAAAAGAP//BwAAAAAAAAAGAAAAAAAAAAAAAAAGAAEAAAAAAAAAAAAGAAIADAAAAAIAAAAGAAMADAAEAAEAAAAGAAQACQAAAAAAAAAGAAUADAAEAAEAAAAGAAYADAAAAAAAAAAHAP//BwAAAAAAAAAHAAAAAAAAAAAAAAAHAAIADAAAAAIAAAAHAAMADAADAAAAAAAHAAQADAADAAEAAAAHAAUADAAEAAEAAAAHAAYADAAAAAAAAAD9////BwAAAAAAAAD9/wAABwAAAAAAAGD9/wEABwAAAAAAAGD9/wIABwAAAAAAAGD9/wMABwAAAAAAAGD9/wUABwAAAAAAAGD9/wYABwAAAAAAAGD+/wMAAAAAAAAAAAD9/wcABwAAAAAAAGD9/wgABwAAAAAAAGD9/wkABwAAAAAAADD+/wcAAAAAAAAAAAD+/wgAAAAAAAAAAAD+/wkABwAAAAAAADD//wYAAAAAAAAAAAD//wcAAAAAAAAAAAD//wgAAAAAAAAAAAD//wkABwAAAAAAADAAAAcAAAAAAAAAAAAAAAgAAAAAAAAAAAAAAAkABwAAAAAAADABAAcAAAAAAAAAAAABAAgAAAAAAAAAAAABAAkABwAAAAAAADACAAcAAAAAAAAAAAACAAgAAAAAAAAAAAACAAkABwAAAAAAADADAAgAAAAAAAAAAAADAAkABwAAAAAAADAEAAcAAAAAAAAAAAAEAAgAAAAAAAAAAAAEAAkABwAAAAAAADAFAAcAAAAAAAAAAAAFAAgAAAAAAAAAAAAGAAcAAAAAAAAAAAAGAAgAAAAAAAAAAAAGAAkABwAAAAAAADAHAAEAAAAAAAAAAAAHAAcAAAAAAAAAAAAHAAgAAAAAAAAAAAAHAAkABwAAAAAAADAIAP//BwAAAAAAAAAIAAAAAAAAAAAAAAAIAAEAAAAAAAAAAAAIAAIADAABAAAAAAAIAAMADAACAAEAAAAIAAQADAACAAEAAAAIAAUADAACAAEAAAAIAAYADAACAAAAAAAIAAcAAAAAAAAAAAAIAAgAAAAAAAAAAAAIAAkABwAAAAAAADAJAP//BwAAAAAAAAAJAAAAAAAAAAAAAAAJAAEAAAAAAAAAAAAJAAIAAAAAAAAAAAAJAAMAAAAAAAAAAAAJAAQAAAAAAAAAAAAJAAUAAAAAAAAAAAAJAAYAAAAAAAAAAAAJAAcAAAAAAAAAAAAJAAgAAAAAAAAAAAAJAAkABwAAAAAAADAKAP//BwAAAAAAAAAKAAAADAABAAEAAAAKAAEADAABAAIAAAAKAAIADAAAAAEAAAAKAAMAAAAAAAAAAAAKAAQAAAAAAAAAAAAKAAUAAAAAAAAAAAAKAAYAAAAAAAAAAAAKAAcAAAAAAAAAAAAKAAgAAAAAAAAAAAAKAAkABwAAAAAAADALAP//BwAAAAAAAAALAAAADAAAAAIAAAALAAEADAAFAAEAAAALAAIADAAAAAAAAAALAAMAAAAAAAAAAAALAAQAAAAAAAAAAAALAAUAAAAAAAAAAAALAAYAAAAAAAAAAAALAAcAAAAAAAAAAAALAAgAAAAAAAAAAAALAAkABwAAAAAAADAMAP//BwAAAAAAAAAMAAAADAABAAAAAAAMAAEADAACAAEAAAAMAAMAAAAAAAAAAAAMAAQAAAAAAAAAAAAMAAUAAAAAAAAAAAAMAAYAAAAAAAAAAAAMAAcAAAAAAAAAAAAMAAgAAAAAAAAAAAAMAAkABwAAAAAAADANAP//BwAAAAAAAAANAAAABwAAAAAAAFANAAEABwAAAAAAAFANAAIABwAAAAAAAFANAAMABwAAAAAAAFANAAUABwAAAAAAAFANAAcABwAAAAAAAFANAAgABwAAAAAAAFANAAkABwAAAAAAADD9/wQAAAAAAAAAAAAFAP//AAAAAAAAAAANAAQAAAAAAAAAAAAFAAkAAAAAAAAAAAABAAUAAAAAAAAAAAACAAUADAABAAIAAAACAAYADAAAAAEAAAADAAcAAAAAAAAAAAANAAYABwAAAAAAAFAMAAIADAACAAAAAAA=")
tile_set = SubResource("TileSet_26yhd")

[node name="Doors" type="Node2D" parent="."]

[node name="Door_Up" type="StaticBody2D" parent="Doors"]
position = Vector2(600, -200)

[node name="Door" type="Sprite2D" parent="Doors/Door_Up"]
position = Vector2(500, 100)
rotation = 3.1415927
texture = ExtResource("7_mbb8p")

[node name="Wall" type="Sprite2D" parent="Doors/Door_Up"]
position = Vector2(500, 99.99999)
texture = ExtResource("11_e7l0e")

[node name="LightOccluder2D" type="LightOccluder2D" parent="Doors/Door_Up"]
occluder = SubResource("OccluderPolygon2D_nfrpb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Doors/Door_Up"]
position = Vector2(500, 100)
shape = SubResource("RectangleShape2D_nfrpb")

[node name="Door_Left" type="StaticBody2D" parent="Doors"]
position = Vector2(-200, 400)

[node name="Door" type="Sprite2D" parent="Doors/Door_Left"]
position = Vector2(-300, 500)
rotation = 1.5707964
scale = Vector2(1.0000001, 1.0000001)
texture = ExtResource("7_mbb8p")

[node name="Wall" type="Sprite2D" parent="Doors/Door_Left"]
position = Vector2(-300, 500)
rotation = -1.5707964
texture = ExtResource("11_e7l0e")

[node name="LightOccluder2D" type="LightOccluder2D" parent="Doors/Door_Left"]
position = Vector2(-800, 400)
occluder = SubResource("OccluderPolygon2D_nfrpb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Doors/Door_Left"]
position = Vector2(-300, 500)
shape = SubResource("RectangleShape2D_4gp0m")

[node name="Door_Down" type="StaticBody2D" parent="Doors"]
position = Vector2(600, 1000)

[node name="Door" type="Sprite2D" parent="Doors/Door_Down"]
position = Vector2(499.99994, 900)
scale = Vector2(0.99999976, 0.9999999)
texture = ExtResource("7_mbb8p")

[node name="Wall" type="Sprite2D" parent="Doors/Door_Down"]
position = Vector2(500, 900)
rotation = -3.1415927
texture = ExtResource("11_e7l0e")

[node name="LightOccluder2D" type="LightOccluder2D" parent="Doors/Door_Down"]
position = Vector2(0, 800)
occluder = SubResource("OccluderPolygon2D_nfrpb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Doors/Door_Down"]
position = Vector2(500, 900)
shape = SubResource("RectangleShape2D_phao3")

[node name="Door_Right" type="StaticBody2D" parent="Doors"]
position = Vector2(1400, 400)

[node name="Door" type="Sprite2D" parent="Doors/Door_Right"]
position = Vector2(1300, 500)
rotation = -1.5707964
scale = Vector2(0.99999994, 0.99999994)
texture = ExtResource("7_mbb8p")

[node name="Wall" type="Sprite2D" parent="Doors/Door_Right"]
position = Vector2(1300, 500)
rotation = 1.5707964
texture = ExtResource("11_e7l0e")

[node name="LightOccluder2D" type="LightOccluder2D" parent="Doors/Door_Right"]
position = Vector2(800, 400)
occluder = SubResource("OccluderPolygon2D_nfrpb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Doors/Door_Right"]
position = Vector2(1300, 500)
shape = SubResource("RectangleShape2D_ojh4s")

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1100, 900)
shape = SubResource("RectangleShape2D_mbine")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(504, 504)
zoom = Vector2(0.575, 0.575)
position_smoothing_enabled = true

[node name="Light" type="Node2D" parent="."]

[node name="LightOccluder2D" type="LightOccluder2D" parent="Light"]
position = Vector2(-200, 600)
occluder = SubResource("OccluderPolygon2D_fr46g")

[node name="LightOccluder2D2" type="LightOccluder2D" parent="Light"]
position = Vector2(2400, 600)
scale = Vector2(-1, 1)
occluder = SubResource("OccluderPolygon2D_fr46g")

[node name="LightOccluder2D4" type="LightOccluder2D" parent="Light"]
position = Vector2(-200, 1200)
rotation = 3.1415927
scale = Vector2(-1, 1)
occluder = SubResource("OccluderPolygon2D_fr46g")

[node name="LightOccluder2D3" type="LightOccluder2D" parent="Light"]
position = Vector2(2400, 1200)
rotation = 3.1415927
occluder = SubResource("OccluderPolygon2D_fr46g")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
z_index = 3
offset_left = -600.0
offset_top = -200.0
offset_right = 2800.0
offset_bottom = 2000.0
color = Color(0, 0, 0, 1)

[node name="EnemySpawnArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemySpawnArea"]
position = Vector2(1104, 900)
shape = SubResource("RectangleShape2D_ilpkg")

[node name="SpawnPoints" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="SpawnPoints"]
position = Vector2(1016, 216)

[node name="Marker2D2" type="Marker2D" parent="SpawnPoints"]
position = Vector2(-88, 208)

[node name="Marker2D3" type="Marker2D" parent="SpawnPoints"]
position = Vector2(8, 760)

[node name="Marker2D4" type="Marker2D" parent="SpawnPoints"]
position = Vector2(1080, 776)

[node name="Lamps" type="Node2D" parent="."]

[node name="PointLight2D2" type="PointLight2D" parent="Lamps"]
position = Vector2(1100, 899.9999)
scale = Vector2(3.3999994, 2.1999996)
color = Color(1, 1, 0.9411765, 1)
energy = 1.25
texture = SubResource("GradientTexture2D_avhjg")

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
visible = false
position = Vector2(8, -8)
navigation_polygon = SubResource("NavigationPolygon_1teyb")

[node name="NavigationObstacle2D2" type="NavigationObstacle2D" parent="NavigationRegion2D"]
vertices = PackedVector2Array(1016, 840, 1088, 808, 1168, 840, 1200, 912, 1168, 992, 1096, 1016, 1016, 992, 984, 912)
affect_navigation_mesh = true
carve_navigation_mesh = true

[node name="NavigationObstacle2D" type="NavigationObstacle2D" parent="NavigationRegion2D"]
vertices = PackedVector2Array(-168, 1344, -104, 1272, -32, 1232, 64, 1224, 200, 1224, 376, 1224, 480, 1224, 600, 1224, 696, 1272, 744, 1328, 776, 1384, 768, 1464, 712, 1536, 632, 1584, 496, 1600, 272, 1600, 80, 1592, -40, 1584, -120, 1544, -168, 1472, -184, 1408)
affect_navigation_mesh = true
carve_navigation_mesh = true

[node name="Barrels" type="Node2D" parent="."]

[node name="Barrel" parent="Barrels" instance=ExtResource("14_f3edp")]
position = Vector2(-272, 1560)

[node name="Barrel2" parent="Barrels" instance=ExtResource("14_f3edp")]
position = Vector2(2416, 1696)

[node name="Barrel3" parent="Barrels" instance=ExtResource("14_f3edp")]
position = Vector2(2248, 1688)

[node name="Barrel4" parent="Barrels" instance=ExtResource("14_f3edp")]
position = Vector2(-120.00003, 1512)

[node name="Barrel5" parent="Barrels" instance=ExtResource("14_f3edp")]
position = Vector2(-160, 1664)

[node name="Barrel6" parent="Barrels" instance=ExtResource("14_f3edp")]
position = Vector2(2512, 1608)

[node name="Barrel7" parent="Barrels" instance=ExtResource("14_f3edp")]
position = Vector2(2344, 1552)

[node name="ItemSpawns" type="Node2D" parent="."]
script = ExtResource("16_h3mm1")

[node name="SpawnPoints" type="Node2D" parent="ItemSpawns"]

[node name="Marker2D2" type="Marker2D" parent="ItemSpawns/SpawnPoints"]
position = Vector2(654, 1035)

[node name="Marker2D3" type="Marker2D" parent="ItemSpawns/SpawnPoints"]
position = Vector2(1544, 1035)

[node name="Marker2D4" type="Marker2D" parent="ItemSpawns/SpawnPoints"]
position = Vector2(1100, 641)

[node name="Marker2D5" type="Marker2D" parent="ItemSpawns/SpawnPoints"]
position = Vector2(1544, 641)

[node name="Marker2D6" type="Marker2D" parent="ItemSpawns/SpawnPoints"]
position = Vector2(654, 641)

[node name="Chests" type="Node2D" parent="."]

[node name="Chest" parent="Chests" instance=ExtResource("17_8klot")]
position = Vector2(-96, 304)

[node name="Chest2" parent="Chests" instance=ExtResource("17_8klot")]
position = Vector2(2303, 304)

[node name="Guy" type="Sprite2D" parent="." groups=["guy"]]
modulate = Color(0.6941206, 0.6941206, 0.6941205, 1)
position = Vector2(1099, 932)
scale = Vector2(0.49850008, 0.49850008)
texture = ExtResource("18_kjmdx")
script = ExtResource("19_uv0rh")

[node name="ChatTimer" type="Timer" parent="Guy"]

[node name="ChatBubble" type="Label" parent="Guy"]
z_index = 2
anchors_preset = -1
anchor_left = 0.75677
anchor_top = -0.13390161
anchor_right = 1.9964889
anchor_bottom = 0.31143433
offset_left = -250.0
offset_top = -250.0
offset_right = -250.00006
offset_bottom = -250.0
theme = SubResource("Theme_mbb8p")
theme_override_fonts/font = ExtResource("20_mbb8p")
theme_override_font_sizes/font_size = 36
text = "wassup broski"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="ChatHideTimer" type="Timer" parent="Guy"]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="EnemySpawnArea" to="." method="_on_enemy_spawn_area_body_entered"]
